--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@fpw/en-wiktionary-la-modules",
   "author": "Folke Will",
   "license": "CC-BY-SA-3.0",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Reimplementation of some Latin modules of en.wikipedia.org, especially inflections",
   "repository": {
     "type": "git",
@@ -10,7 +10,9 @@
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prepack": "tsc",
     "lint": "tslint --project .",
