--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@fpw/en-wiktionary-la-modules",
   "author": "Folke Will",
   "license": "CC-BY-SA-3.0",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Reimplementation of some Latin modules of en.wikipedia.org, especially inflections",
   "repository": {
     "type": "git",
@@ -11,7 +11,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "prepack": "tsc",
@@ -28,12 +29,12 @@
   "devDependencies": {
     "@types/chai": "4.1.3",
     "@types/mocha": "5.2.7",
-    "@types/node": "^15.3.0",
+    "@types/node": "^15.14.9",
     "chai": "4.2.0",
     "mocha": "8.1.3",
-    "ts-mocha": "8.0.0",
     "nyc": "15.1.0",
+    "ts-mocha": "8.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.7.4"
   }
 }
