--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "@fpw/en-wiktionary-la-modules",
   "author": "Folke Will",
   "license": "CC-BY-SA-3.0",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Reimplementation of some Latin modules of en.wikipedia.org, especially inflections",
   "repository": {
     "type": "git",
     "url": "https://github.com/fpw/en-wiktionary-la-modules"
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
   "files": [
     "dist",
     "src"
@@ -36,5 +35,6 @@
     "ts-mocha": "8.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.7.4"
-  }
+  },
+  "dependencies": {}
 }
