--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@fpw/en-wiktionary-la-modules",
   "author": "Folke Will",
   "license": "CC-BY-SA-3.0",
-  "version": "0.0.16",
+  "version": "0.1.1",
   "description": "Reimplementation of some Latin modules of en.wikipedia.org, especially inflections",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   "scripts": {
     "prepack": "tsc",
     "lint": "tslint --project .",
-    "test": "nyc --reporter=html ts-mocha tests/**/*.spec.ts"
+    "test": "ts-mocha tests/**/*.spec.ts"
   },
   "keywords": [
     "wiktionary",
@@ -27,14 +27,13 @@
     "declension"
   ],
   "devDependencies": {
-    "@types/chai": "4.1.3",
-    "@types/mocha": "5.2.7",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^15.14.9",
-    "chai": "4.2.0",
-    "mocha": "8.1.3",
-    "nyc": "15.1.0",
-    "ts-mocha": "8.0.0",
-    "ts-node": "^9.1.1",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {}
